# archivo

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  MANIFEST.in  Pipfile  README.md  archivo_config.toml  pyproject.toml  run.sh  setup.py
.github/workflows/: pytest.yml
archivo/: .gitignore  README.md  archivo.py  archivoConfig.py  config.yml  crawlURIs.py  dbUtils.py  diffOntologies.py  discovery.py  eswc_eval.py  event_log.md  graphing.py  main.py  mainDiff.py  requirements.txt  shacl  some_scripts.py  suggestionService.py
archivo/Dependency_tree/: tree.py
archivo/config/: __init__.py
archivo/crawling/: ArchivoVersion.py  BestEffortCrawling.py  archivo_version.py  best_effort_crawling.py  discovery.py  sources.py
archivo/database/: __init__.py
archivo/datastructs/: OntoloyCandidate.py
archivo/indices/: fallout_index.csv  vocab_index.json
archivo/logging/: __init__.py  archivoLogs.py
archivo/models/: ContentNegotiation.py  CrawlingResponse.py  DataWriter.py  DatabusIdentifier.py  FileWriter.py  (+6 more)
docs/: archivo_mods_overview.md  mods_metadata_models.md
eswc2021/: README.md
iswc2022/: README.md
paper-supplement/: README.md
shacl-library/: LODE.ttl  README.md  archivo.ttl  license-I.ttl  license-II.ttl  metadata-test.ttl  pyLODE.ttl
src/: crawlURIs.py  diffOntologies.py  fallout_index.csv  generatePoms.py  inspectVocabs.py  main.py  mainDiff.py  ontoFiles.py  onto_shacl.ttl  shacl-license-test.ttl  stringTools.py  validation.py  vocab_index.json  vocab_index.txt
tests/: test_download_api.py
vocabulary/: vocab.nt  vocab.rdf  vocab.ttl
(+82 files in other folders)
